--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
     }
    ],
    "source": [
-    "los_cabos_pop = cities['']\n",
+    "los_cabos_pop = cities['Populatioin'][]\n",
     "los_cabos_pop # 287651"
    ]
   },
