Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
     }
    ],
    "source": [
-    "city_count = range(cities)\n",
+    "city_count = range()\n",
     "city_count # 12"
    ]
   },
